--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -22,59 +22,11 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <TextView
-            android:text="色相"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <SeekBar
-            android:id="@+id/seekbar_hue_0"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image_view"
-            android:layout_margin="10dp" />
-
-        <SeekBar
-            android:id="@+id/seekbar_hue_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/seekbar_hue_0"
-            android:layout_margin="10dp" />
-
-        <SeekBar
-            android:id="@+id/seekbar_hue_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp" />
-
-        <SeekBar
-            android:id="@+id/seekbar_hue_3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp" />
-        <TextView
-            android:text="饱和度"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <SeekBar
-            android:id="@+id/seekbar_saturation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/seekbar_hue_2"
-            android:layout_margin="10dp" />
-        <TextView
-            android:text="亮度"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-        <SeekBar
-            android:id="@+id/seekbar_lum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/seekbar_saturation"
-            android:layout_margin="10dp" />
+      <Button
+          android:onClick="selectPrimaryColor"
+          android:text="选择主题色"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:ignore="HardcodedText" />
     </LinearLayout>
 </RelativeLayout>
